--- a/config
+++ b/config
@@ -104,6 +104,10 @@ bindsym $mod+7 workspace 7
 bindsym $mod+8 workspace 8
 bindsym $mod+9 workspace 9
 bindsym $mod+0 workspace 10
+#multi monitor things
+
+workspace 1 output DVI-D-0 # workspace 1 to DVI
+workspace 10 output VGA-0 # workspace 10 to VGA
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace 1
